--- a/(2)Cookie Monster Portfolio/css/style.css
+++ b/(2)Cookie Monster Portfolio/css/style.css
@@ -8,6 +8,7 @@ Developed @ One Month in NYC
 */
 
 body {
+	background: url('../images/cookie-monster.jpg');
 	/*background: url('../images/cookie-monster.jpg');*/
 	/* the follow is the code to have the image display as a full page */
 	background-position: center;
@@ -16,4 +17,28 @@ body {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+
+#container {
+	background: black;
+	width: 440px;
+	color: white;
+	padding: 15px;
+}
+
+h1 {
+	font-size: 70px;
+}
+
+h2 {
+	font-size: 30px;
+	background-color: #75c1f6;
+	color: black;
+	padding: 5px;
+	border-radius: 5px;
+}
+
+a {
+	color: #75c1f6;
+	text-decoration: none;
 }
