--- a/7-AirCnC/css/style.css
+++ b/7-AirCnC/css/style.css
@@ -34,6 +34,138 @@ strong {
 
 
 /*
+ * Header styles
+*/
+header {
+  text-align: center;
+  background-color: white;
+}
+
+header h1{
+  font-size: 1.5rem;
+  padding: 10px;
+  font-weight: bold;
+  width: 120px;
+  border-right: 1px solid #DCE0E0;
+  color: #FF595F;
+}
+
+/*
+ * Hero styles
+*/
+
+.hero {
+  height: 600px;
+}
+
+/*
+ * Rental styles
+*/
+
+.rental {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #909597;
+}
+
+.profile {
+  box-sizing: border-box;
+  border-right: 1px solid #DCE0E0;
+  padding-top: 15px;
+  margin-right: 10px;
+  display: flex;
+  height: 148px;
+  width: 660px;
+  margin-left: 200px;
+}
+
+.owner-details{
+  margin-right: 20px;
+  text-align: center;
+  padding: 0px;
+  margin-left: 5px;
+}
+
+.owner-details img {
+  border-radius: 75%;
+  width: 90px;
+  height: 90px;
+}
+
+.owner-details h2 {
+  font-size: 0.875 rem;
+  margin-left: 0px;
+}
+
+.owner-details h2.name {
+  font-weight: bold;
+  color: #909597;
+}
+
+.pet-details{
+  padding: 0px;
+}
+
+.pet-details h1,h2 {
+  margin-left: 15px;
+}
+
+.pet-details h1{
+  margin-top: 5px;
+  font-size: 1.375rem;
+  font-weight: bold;
+  color: #666a6c;
+}
+
+.pet-details h2{
+  font-size: 1.125rem;
+  font-weight: normal;
+  color: #909597;
+  margin-top: 10px;
+}
+
+span.icons {
+  display: flex;
+  margin-top: 10px;
+}
+
+.icons .image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 30px;
+  margin-left: 15px;
+}
+
+.icons img {
+  width: 40px;
+  height: 40px;
+}
+
+.booking {
+  text-align: center;
+  margin-right: 150px;
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+.booking button {
+  width: 284px;
+  margin-top: 15px;
+  font-family: 'Open Sans', arial, sans-serif;
+  font-weight: bold;
+}
+
+.booking h2 {
+  font-size: 1.125rem;
+  font-weight: bold;
+  color: #666a6c;
+  margin-left: 0px;
+  margin-top: 10px;
+  padding: 0px;
+}
+
+/*
  * Button styles
 */
 
@@ -43,8 +175,9 @@ strong {
   text-decoration: none;
   display: block;
   padding: 0.75rem 5rem;
-  border-bottom: 1px solid rgb(227, 25, 29);
-  border-radius: 2px;
+  /* border-bottom: 1px solid rgb(227, 25, 29);
+  border-radius: 2px; */
+  border: none;
   width: 95%;
   margin: 0 auto;
 }
