--- a/7-AirCnC/css/style.css
+++ b/7-AirCnC/css/style.css
@@ -34,136 +34,317 @@ strong {
 
 
 /*
+ * Heading 
+*/
+
+
+h1 {
+  font-size: 1.375rem;
+  color: #666a6c;
+}
+
+/*
  * Header styles
 */
 header {
-  text-align: center;
-  background-color: white;
+  background: #FFF;
 }
 
-header h1{
-  font-size: 1.5rem;
-  padding: 10px;
-  font-weight: bold;
-  width: 120px;
+header .logo {
   border-right: 1px solid #DCE0E0;
-  color: #FF595F;
 }
+
 
 /*
  * Hero styles
 */
 
 .hero {
-  height: 600px;
+  height: 300px;
+}
+.hero img {
+  width: 100%;
+  height: 100%;
 }
 
 /*
- * Rental styles
+ * Info styles
 */
 
-.rental {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #909597;
-}
-
-.profile {
-  box-sizing: border-box;
-  border-right: 1px solid #DCE0E0;
-  padding-top: 15px;
-  margin-right: 10px;
-  display: flex;
-  height: 148px;
-  width: 660px;
-  margin-left: 200px;
-}
-
-.owner-details{
-  margin-right: 20px;
+.info {
+  background-color: #FFF;
   text-align: center;
-  padding: 0px;
-  margin-left: 5px;
+  padding: 1.5625rem;
 }
 
-.owner-details img {
-  border-radius: 75%;
-  width: 90px;
-  height: 90px;
+.info h1 {
+  margin-bottom: .3125rem;
 }
 
-.owner-details h2 {
-  font-size: 0.875 rem;
-  margin-left: 0px;
+.info .profile {
+  margin-bottom: 1.5rem;
 }
 
-.owner-details h2.name {
-  font-weight: bold;
+.info .owner-details img {
+  border-radius: 50%;
+  margin-bottom: .375rem;
+}
+
+.info h2.relationship, .info h2.name {
   color: #909597;
+  margin-bottom: .1875rem;
 }
 
-.pet-details{
-  padding: 0px;
+.info h2.name{
+  font-weight: bold;
 }
 
-.pet-details h1,h2 {
-  margin-left: 15px;
+.info p.location {
+  margin-bottom: 1.25rem;
 }
 
-.pet-details h1{
-  margin-top: 5px;
+.info .icon {
+  float: left;
+  width: 33.3%;
+}
+
+.info .icon img {
+  height: 30px;
+  margin-bottom: .1875rem;
+}
+
+.info .booking h2 {
+  font-weight: 600;
   font-size: 1.375rem;
-  font-weight: bold;
-  color: #666a6c;
+  margin-bottom: .8125rem;
 }
 
-.pet-details h2{
-  font-size: 1.125rem;
-  font-weight: normal;
-  color: #909597;
-  margin-top: 10px;
+.info h2.price .time {
+  font-size: 1rem;
 }
 
-span.icons {
-  display: flex;
-  margin-top: 10px;
+.info:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.icons .image-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 30px;
-  margin-left: 15px;
+/*
+ * Main styles
+*/
+
+main {
+  margin-top: .875rem;
+  border-top: 1px solid #DCE0E0;
+  background-color: #F5F5F5;
 }
 
-.icons img {
-  width: 40px;
-  height: 40px;
-}
+/*
+ * About styles
+*/
 
-.booking {
+.about {
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #DCE0E0;
   text-align: center;
-  margin-right: 150px;
-  margin-left: auto;
-  margin-top: 20px;
 }
 
-.booking button {
-  width: 284px;
-  margin-top: 15px;
+.about h3 {
   font-family: 'Open Sans', arial, sans-serif;
   font-weight: bold;
+  font-size: 1rem;
+  color: #565a5c;
+  margin-top: 30px;
 }
 
-.booking h2 {
-  font-size: 1.125rem;
-  font-weight: bold;
-  color: #666a6c;
-  margin-left: 0px;
-  margin-top: 10px;
-  padding: 0px;
+.about p {
+  font-family: 'Open Sans', arial, sans-serif;
+  font-weight: regular;
+  font-size: .875rem;
+  color: #565a5c;
+  margin-top: 20px;
+  line-height: 22px;
+  margin-bottom: 30px
 }
+
+.about span {
+  text-align: center;
+  font-family: 'Open Sans', arial, sans-serif;
+  font-weight: bold;
+  font-size: .875rem;
+  color: #ff595f;
+}
+
+/*
+ * Care styles
+*/
+
+.care {
+  text-align: left;
+  padding-left: 1.5625rem;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #DCE0E0;
+}
+
+.care h3 {
+  padding-bottom: 10px;
+}
+
+.care span {
+  font-weight: 600;
+}
+
+.care li {
+  padding-top: .625rem;
+}
+
+/*
+ * Games styles
+*/
+
+.games {
+  text-align: left;
+  padding-left: 1.5625rem;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-bottom: 1px solid #DCE0E0;
+}
+
+.games h3 {
+  padding-bottom: 10px;
+}
+
+.games li {
+  padding-top: .625rem;
+}
+
+.games img {
+  padding-right: 5px;
+}
+
+/*
+ * Photos styles
+*/
+
+.photos {
+  padding-top: 20px;
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+@media only screen and (min-width: 1060px) {
+
+  .hero {
+    height: auto;
+  }
+
+  .container {
+    width: 1040px;
+    margin: 0 auto;
+  }
+
+  .column {
+    float: left;
+  }
+
+  .button {
+    width: 275px;
+    margin: auto;
+  }
+
+  .info h1 {
+    margin-bottom: .6875rem;
+  }
+
+  .info h2 {
+    margin-bottom: .1875rem;
+  }
+
+  .info .profile {
+    width: 660px;
+    border-right: 1px solid #DCE0E0;
+  }
+
+  .info .booking {
+    width: 380px;
+  }
+
+  .info .owner-details {
+    width: 20%;
+  }
+
+  .info .pet-details {
+    width: 80%;
+    text-align: left;
+  }
+  .info .pet-details .icon {
+    width: inherit;
+    margin-right: 50px;
+  }
+
+  .info .pet-details .icon img {
+    display: block;
+    margin: .1875rem auto .1875rem;
+  }
+
+  .info a {
+    width: 80%;
+  }
+
+  main {
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+
+  .about h3, .about p{
+    text-align: center;
+  }
+
+  .about span{
+    text-align: left;
+  }
+
+  .care {
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+
+  .care div {
+    padding-right: 20px;
+  }
+
+  .care h3 {
+    padding-top: 9px;
+  }
+  .care ul {
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+  .care li {
+    padding-left: 25px;
+  }
+
+  .games {
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+
+  .games ul {
+    padding-left: 25px;
+  }
+
+  .photos {
+    text-align: center;
+    margin-bottom: 100px;
+  }
+  .photos img {
+    height: 30%;
+    width: 30%;
+    margin-left: 10px;
+  }
+}
+
 
 /*
  * Button styles
@@ -175,8 +356,8 @@ span.icons {
   text-decoration: none;
   display: block;
   padding: 0.75rem 5rem;
-  /* border-bottom: 1px solid rgb(227, 25, 29);
-  border-radius: 2px; */
+  border-bottom: 1px solid rgb(227, 25, 29);
+  border-radius: 2px;
   border: none;
   width: 95%;
   margin: 0 auto;
